--- a/_posts/2015-03-17-demo.md
+++ b/_posts/2015-03-17-demo.md
@@ -3,6 +3,7 @@ layout: page
 title: "Demo"
 category: doc
 date: 2015-03-17 17:42:47
+order: 130
 ---
 
 The demo application is in pippo-demo module. The demo module contains some demo applications: 
