--- a/_posts/2015-03-17-security.md
+++ b/_posts/2015-03-17-security.md
@@ -3,6 +3,7 @@ layout: page
 title: "Security"
 category: doc
 date: 2015-03-17 17:29:19
+order: 100
 ---
 
 You can secure your application or only some parts using a filter (a RouteHandler). Remember that routes are matched 
