add Modules section

--- a/_posts/2015-03-17-spring.md
+++ b/_posts/2015-03-17-spring.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: "Spring IoC"
-category: doc
+title: "Spring"
+category: mod
 date: 2015-03-17 18:07:29
-order: 120
+order: 10
 ---
 
 Pippo can be used together with the Spring framework, using Spring as a dependency injection container. When Pippo creates new instances of your various Controller subclasses, the pippo-spring integration would then take care that the Spring-managed service beans (e.g. Services) get injected into the desired instance fields (marked by the `@Inject` annotations in your code). An example of such a Controller subclass could look as follows:
