improve settings sesction

--- a/_posts/2015-03-17-settings.md
+++ b/_posts/2015-03-17-settings.md
@@ -32,3 +32,4 @@ This is the order Pippo will use to try to resolve an _application.properties_ f
 An externally located _application.properties_ file is automatically reloaded, if modified, on the next setting access
 within Pippo. This allows your Pippo application to be responsive without being restarted.
 
+You can access programmatically your application settings using `Application.get().getPippoSettings()`.
