--- a/_posts/2015-03-17-spring.md
+++ b/_posts/2015-03-17-spring.md
@@ -32,7 +32,7 @@ To activate pippo-spring integration in your Application you must add `SpringCon
 public class MyApplication extends Application {
 
     @Override
-    public void init() {
+    protected void onInit() {
         // create spring application context
         ApplicationContext applicationContext = new AnnotationConfigApplicationContext(SpringConfiguration.class);
         
