--- a/_posts/2015-04-03-groovy.md
+++ b/_posts/2015-04-03-groovy.md
@@ -81,7 +81,7 @@ script(src: publicAt('js/main.js')) {}
 public class MyApplication extends Application {
 
 	@Override
-    public void init() {
+    protected void onInit() {
         // add classpath resource handlers
         GET(new WebjarsResourceHandler());
         GET(new PublicResourceHandler());
