--- a/_posts/2015-04-03-pebble.md
+++ b/_posts/2015-04-03-pebble.md
@@ -85,7 +85,7 @@ pippo-pebble supports context-aware url generation for your classpath resources 
 public class MyApplication extends Application {
 
 	@Override
-    public void init() {
+    protected void onInit() {
         // add classpath resource handlers
         GET(new WebjarsResourceHandler());
         GET(new PublicResourceHandler());
