--- a/_posts/2015-04-03-trimou.md
+++ b/_posts/2015-04-03-trimou.md
@@ -90,7 +90,7 @@ pippo-trimou supports context-aware url generation for your classpath resources 
 public class MyApplication extends Application {
 
 	@Override
-    public void init() {
+    protected void onInit() {
         // add classpath resource handlers
         GET(new WebjarsResourceHandler());
         GET(new PublicResourceHandler());
