--- a/_posts/2015-03-17-maven.md
+++ b/_posts/2015-03-17-maven.md
@@ -58,3 +58,19 @@ where ${pippo.version} is the last Pippo version.
 
 You may want to check for the latest released version using [Maven Search](http://search.maven.org/#search%7Cga%7C1%7Cpippo)
 
+Also you can use the latest SNAPSHOT via the Sonatype Maven Repository:
+
+```xml
+<repositories>
+    <repository>
+        <id>sonatype-nexus-snapshots</id>
+        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        <releases>
+            <enabled>false</enabled>
+        </releases>
+        <snapshots>
+            <enabled>true</enabled>
+        </snapshots>
+    </repository>
+</repositories>
+```
