--- a/_posts/2015-03-17-maven.md
+++ b/_posts/2015-03-17-maven.md
@@ -56,9 +56,9 @@ Also if you want to use the default servlet engine (Jetty) in your project, you 
 
 where ${pippo.version} is the last Pippo version.
 
-You may want to check for the latest released version using [Maven Search](http://search.maven.org/#search%7Cga%7C1%7Cpippo)
+You may want to check for the latest released version using [Maven Search](http://search.maven.org/#search%7Cga%7C1%7Cpippo)   
 
-Also you can use the latest SNAPSHOT via the Sonatype Maven Repository:
+Also you can use the latest **SNAPSHOT** via the Sonatype Maven Repository:
 
 ```xml
 <repositories>
