--- a/_posts/2015-03-27-session.md
+++ b/_posts/2015-03-27-session.md
@@ -75,4 +75,13 @@ public class MyApplication extends Application {
 }
 ```
 
+A session is available automatically to templates for the rendering page process. So, you can references any session attribute in your template. Bellow see a simple example (using freemarker as template engine):  
+
+```
+<#if (session)??>
+	<div>${session.id}</div>
+    <div>${session.username}</div>
+<#else>
+```
+
 For a fully functional demo related to custom session please see [pippo-demo-session]({{ site.demourl }}/pippo-demo-session) module.  
