flash outgoing instead of outcoming

--- a/_posts/2015-03-27-flash.md
+++ b/_posts/2015-03-27-flash.md
@@ -58,11 +58,11 @@ The snippet for login template (freemarker engine) can be:
 Virtually, the flash messages can be splitted in two categories: 
 
 - incoming
-- outcoming 
+- outgoing 
 
 The _incoming_ messages are messages that are available automatically (via `Response.locals`) to templates for the rendering page process. 
 You can retrieves programmatically this list with `Response.getLocals().getFlash()` or `Response.getFlash()`.  
-The _outcoming_ messages are messages that are keeped in session for the next request. You can set such a message using `RouteContext.flashXXX()` or `Session.getFlash()add()`.
+The _outgoing_ messages are messages that are keeped in session for the next request. You can set such a message using `RouteContext.flashXXX()` or `Session.getFlash().add()`.
 You can retrieves programmatically this list with `Session.getFlash()`.  
 On each request the `RouteDispatcher` removes the Flash instance from the session, binds it to the `RouteContext`, and creates a new Flash instance.  
 Are situation when we want to put a flash message directly in incoming (see ValidationApplication.java from pippo-demo-validation project). For these situations we can use:
