Weld description page

--- a/_posts/2015-03-17-server.md
+++ b/_posts/2015-03-17-server.md
@@ -53,6 +53,7 @@ Pippo comes (out of the box) with some web servers:
 
 - [Jetty](http://eclipse.org/jetty) `pippo-jetty`
 - [Undertow](http://undertow.io) `pippo-undertow`
+- [Tomcat](http://tomcat.apache.org) `pippo-tomcat`
 - [TJWS](http://tjws.sourceforge.net) `pippo-tjws`
 
 To use one of these servers just add a dependency in your project:
@@ -83,5 +84,5 @@ public interface WebServer {
 
 If you want to make your embedded server plugable for Pippo than you must add file 
 `ro.pippo.core.WebServer` in _src/main/resources/META-INF/services_ folder with your class name that implements 
-WebServer as content (for an hypothetical Tomcat integration the content file should be _ro.pippo.tomcat.TomcatServer_).
+WebServer as content (for an Tomcat integration the content file should be _ro.pippo.tomcat.TomcatServer_).
 
