improve Issues section

--- a/_posts/2015-06-26-issues.md
+++ b/_posts/2015-06-26-issues.md
@@ -6,4 +6,6 @@ date: 2015-06-26 22:45:33
 order: 45
 ---
 
-You can report any bug you find in Pippo framework in our [github](https://github.com/decebals/pippo/issues) issues list. We will happily discuss it there.
+You can report any bug you find in Pippo framework in our [github](https://github.com/decebals/pippo/issues) issues list. We will happily discuss it there.  
+It's recomanded to create a quickstart to accompany a bug report. If you report a bug (in Github or on the mailing list) the core developers may not be able to recreate it easily.
+If you don’t know how to do that, don’t worry - just read [Quickstart](/dev/quickstart.html) section.
