--- a/_posts/2015-04-03-jade.md
+++ b/_posts/2015-04-03-jade.md
@@ -76,16 +76,16 @@ script(src=pippo.webjarsAt('bootstrap/3.3.1/js/bootstrap.min.js'))
 script(src=pippo.publicAt('js/main.js'))
 ```
 
-**NOTE:** Use of these methods require that you have registered a `WebjarsResourceHandler` and/or a `PublicResourcehandler`.
+**NOTE:** Use of these methods require that you have registered a `WebjarsResourceRoute` and/or a `PublicResourceRoute`.
 
 ```java
 public class MyApplication extends Application {
 
 	@Override
     protected void onInit() {
-        // add classpath resource handlers
-        GET(new WebjarsResourceHandler());
-        GET(new PublicResourceHandler());
+		// add routes for static content
+        addPublicResourceRoute();
+        addWebjarsResourceRoute();
         ...
     }
     
