--- a/_posts/2015-05-05-routes.md
+++ b/_posts/2015-05-05-routes.md
@@ -56,3 +56,18 @@ If you want to be more riguros you can use something like:
 ```java
 GET("/contact/{id: [0-9]+}", (routeContext) -> { ... });
 ```
+
+`Named` routes make referring to routes when generating redirects or URLs more convenient. You may specify a name for a route like so:
+
+```java
+GET("/blogs/{year}/{month}/{day}/{title}", (routeContext) -> { routeContext.render("myTemplate")}).named("blog");
+```
+
+Now, you may use the route's name when generating URLs or redirects:
+
+```java
+Map<String, Object> parameters = ...
+routeContext.uriFor("blog", parameters);
+// or
+routeContext.redirect("blog", parameters);
+```
