add Named routes subsection title

--- a/_posts/2015-05-05-routes.md
+++ b/_posts/2015-05-05-routes.md
@@ -57,6 +57,8 @@ If you want to be more riguros you can use something like:
 GET("/contact/{id: [0-9]+}", (routeContext) -> { ... });
 ```
 
+#### Named routes
+
 `Named` routes make referring to routes when generating redirects or URLs more convenient. You may specify a name for a route like so:
 
 ```java
