fix broken links after moving demo applications in a new repository

--- a/_posts/2015-03-17-demo.md
+++ b/_posts/2015-03-17-demo.md
@@ -6,7 +6,7 @@ date: 2015-03-17 17:42:47
 order: 200
 ---
 
-The demo applications are in [pippo-demo]({{ site.demourl }}) module: 
+The demo applications are in [pippo-demo](https://github.com/decebals/pippo-demo) repository: 
 
 - General
     - [Basic]({{ site.demourl }}/pippo-demo-basic)
