Update links in  section #30

--- a/_posts/2015-03-27-session.md
+++ b/_posts/2015-03-27-session.md
@@ -39,7 +39,7 @@ POST("/login", (routeContext) -> {
 });
 ```
 
-Pippo allow you to customize Session via [pippo-session]({{ site.codeurl }}/pippo-session) module.  
+Pippo allow you to customize Session via [pippo-session]({{ site.codeurl }}/pippo-session-parent/pippo-session) module.  
 If you want a (custom) session manager in your application then you must inject that manager with:
 
 ```java
@@ -51,7 +51,7 @@ A session manager is composed of two parts:
 - `SessionDataStorage` that is a CRUD over `StoreData`
 - `SessionStrategy` that is responsible to fetch the session id from a HttpRequest (for example from a cookie or header).
 
-The default session manager comes with a [MemorySessionDataStorage]({{ site.codeurl }}/pippo-session/src/main/java/ro/pippo/session/MemorySessionDataStorage.java) that keeps the session data in a Map and a [CookieSessionStrategy]({{ site.codeurl }}/pippo-session/src/main/java/ro/pippo/session/CookieSessionStrategy.java) that saves/retrieves the session id to/from a cookie.  
+The default session manager comes with a [MemorySessionDataStorage]({{ site.codeurl }}/pippo-session-parent/pippo-session/src/main/java/ro/pippo/session/MemorySessionDataStorage.java) that keeps the session data in a Map and a [CookieSessionStrategy]({{ site.codeurl }}/pippo-session-parent/pippo-session/src/main/java/ro/pippo/session/CookieSessionStrategy.java) that saves/retrieves the session id to/from a cookie.  
 All the implementation is based on `Response.finalizeResponse()`. On this method I try to store/delete the session id and the session data. The main idea is that __ALL__ the methods from Response that commit the response must call `finalizeResponse()`.  
 
 See below a snipet code about how to work with cookie session in Pippo:
