--- a/_posts/2015-03-17-spring.md
+++ b/_posts/2015-03-17-spring.md
@@ -8,7 +8,7 @@ order: 10
 
 Pippo can be used together with the [Spring framework](http://projects.spring.io/spring-framework), using Spring as a dependency injection container.  
 When Pippo creates new instances of your various `Controller` subclasses it delegates the instance creation to a `ControllerFactory`.
-The module [pippo-spring]({{ site.codeurl }}/pippo-spring) contains [SpringControllerFactory]({{ site.codeurl }}/pippo-spring/src/main/java/ro/pippo/spring/SpringControllerFactory.java) that it's 
+The module [pippo-spring]({{ site.codeurl }}/pippo-controller-parent/pippo-spring) contains [SpringControllerFactory]({{ site.codeurl }}/pippo-controller-parent/pippo-spring/src/main/java/ro/pippo/spring/SpringControllerFactory.java) that it's 
 a `ControllerFactory` implementation that delegates to the Spring container to instantiate a given `Controller` class. This allows for the instance to be configured via dependency injection (all Spring annotations are valid, AOP, ...).
 
 An example of such a Controller subclass could look as follows:
