--- a/_posts/2015-05-27-guice.md
+++ b/_posts/2015-05-27-guice.md
@@ -8,7 +8,7 @@ order: 15
 
 Pippo can be used together with the [Guice](https://github.com/google/guice), using Guice as a dependency injection container.  
 When Pippo creates new instances of your various `Controller` subclasses it delegates the instance creation to a `ControllerFactory`.
-The module [pippo-guice]({{ site.codeurl }}/pippo-guice) contains [GuiceControllerFactory]({{ site.codeurl }}/pippo-guice/src/main/java/ro/pippo/guice/GuiceControllerFactory.java) that it's 
+The module [pippo-guice]({{ site.codeurl }}/pippo-controller-parent/pippo-guice) contains [GuiceControllerFactory]({{ site.codeurl }}/pippo-controller-parent/pippo-guice/src/main/java/ro/pippo/guice/GuiceControllerFactory.java) that it's 
 a `ControllerFactory` implementation that delegates to the Guice container to instantiate a given `Controller` class. This allows for the instance to be configured via dependency injection.
 
 An example of such a Controller subclass could look as follows:
