Fix broken links in CDI section #35

--- a/_posts/2015-06-26-cdi.md
+++ b/_posts/2015-06-26-cdi.md
@@ -8,7 +8,7 @@ order: 17
 
 Pippo can be used together with [CDI](http://www.cdi-spec.org/), using [Weld](http://weld.cdi-spec.org) as the implementation mechanism.  
 When Pippo creates new instances of your various `Controller` subclasses it delegates the instance creation to a `ControllerFactory`.
-The module [pippo-weld]({{ site.codeurl }}/pippo-weld) contains [WeldControllerFactory]({{ site.codeurl }}/pippo-weld/src/main/java/ro/pippo/weld/WeldControllerFactory.java) that it's 
+The module [pippo-weld]({{ site.codeurl }}/pippo-controller-parent/pippo-weld) contains [WeldControllerFactory]({{ site.codeurl }}/pippo-controller-parent/pippo-weld/src/main/java/ro/pippo/weld/WeldControllerFactory.java) that it's 
 a `ControllerFactory` implementation that delegates to the Weld container to instantiate a given `Controller` class. This allows for the instance to be configured via dependency injection.
 
 An example of such a Controller subclass could look as follows:
