Fixed a few small/grammar mistakes, and added a deployment page.

--- a/_posts/2015-03-27-session.md
+++ b/_posts/2015-03-27-session.md
@@ -75,7 +75,7 @@ public class MyApplication extends Application {
 }
 ```
 
-A session is available automatically to templates for the rendering page process. So, you can references any session attribute in your template. Bellow see a simple example (using freemarker as template engine):  
+A session is available automatically to templates for the rendering page process, which allows you to reference any session attribute in your template. Below is a simple example using freemarker as template engine:  
 
 ```
 <#if (session)??>
