--- a/_posts/2015-06-18-filters.md
+++ b/_posts/2015-06-18-filters.md
@@ -39,7 +39,7 @@ GET("/contact.*", (routeContext) {
 In above snippet we protected all contact pages. If the current session doesn't contain an attribute `username` 
 then our filter redirects the request to the `login` page.
 
-Now we want to propose you a most complicated scenario where we are getting a Database instance to be shared 
+Now for a complicated scenario where we are getting a Database instance to be shared 
 throughout a request-response cycle:
 
 ```java
