--- a/_posts/2015-05-27-guice.md
+++ b/_posts/2015-05-27-guice.md
@@ -49,7 +49,7 @@ public class MyApplication extends Application {
 }
 ```
 
-where `GuiceModule` can looks like:
+where `GuiceModule` might look like:
 
 ```java
 public class GuiceModule extends AbstractModule {
