--- a/_posts/2015-05-05-routes.md
+++ b/_posts/2015-05-05-routes.md
@@ -103,3 +103,49 @@ GET("/contact/{id}(\\.(json|xml|yaml))", (ctx) -> ctx.send(contact));
 **Note:**
 
 If you specify your parameter <u>without</u> a regex pattern, like the third example (e.g. `{id}`), the value of *id* will include your suffix unless you require the suffix using the pattern in the second example.
+
+#### Route groups
+
+[RouteGroup]({{ site.coreurl }}src/main/java/ro/pippo/core/route/RouteGroup.java) allow you to prefix <code>uriPattern</code>,
+across a large number of routes without needing to define this attribute on each individual route.   
+Also you can add (route) filters for all routes of the group.
+
+The below snippet defines a `UserRoutes` group:
+
+```java
+public class UserRoutes extends RouteGroup {
+
+    public UserRoutes() {
+        super("/user");
+
+        // BEFORE FILTERS
+        addBeforeFilters();
+
+        // CRUD ROUTES
+        GET("/{id}", routeContext -> { ... }); // retrieve
+        POST("/", routeContext -> { ... }); // create
+        PUT("/{id}", routeContext -> { ... }); // update
+        DELETE("/{id}", routeContext -> { ... }); // delete
+    }
+
+}
+```
+
+Add the `UserRoutes` group to application:
+
+```java
+public class PippoApplication extends Application {
+
+    @Override
+    protected void onInit() {
+        addRouteGroup(new UserRoutes());
+    }
+
+}
+```
+
+You can access the routes defined in `UserRoutes` using something like `http://localhost:8338/user/1` (retrieve the user with _id_ equals with 1).
+
+You can see a more complex example in [Matilda](https://github.com/decebals/matilda/blob/master/src/main/java/ro/fortsoft/matilda/PippoApplication.java#L108) (a real life application built with Pippo).
+ 
+
