Add more info about available session implementations #31

--- a/_posts/2015-03-27-session.md
+++ b/_posts/2015-03-27-session.md
@@ -40,11 +40,6 @@ POST("/login", (routeContext) -> {
 ```
 
 Pippo allow you to customize Session via [pippo-session]({{ site.codeurl }}/pippo-session-parent/pippo-session) module.  
-If you want a (custom) session manager in your application then you must inject that manager with:
-
-```java
-application.setSesionManager(new SessionManager());
-``` 
 
 A session manager is composed of two parts:
 
@@ -74,6 +69,14 @@ public class MyApplication extends Application {
 
 }
 ```
+
+Pippo also has the following SessionDataStorage modules:
+
+- In Memory ([Memory]({{ site.codeurl }}/pippo-session-parent/pippo-session/src/main/java/ro/pippo/session/MemorySessionDataStorage.java))
+- Cookie ([Cookie]({{ site.codeurl }}/pippo-session-parent/pippo-session-cookie/src/main/java/ro/pippo/session/cookie/CookieSessionDataStorage.java))
+- Java Cache ([JCache]({{ site.codeurl }}/pippo-session-parent/pippo-session-jcache/),[Ehcache2]({{ site.codeurl }}/pippo-session-parent/pippo-session-ehcache2/),[Ehcache3]({{ site.codeurl }}/pippo-session-parent/pippo-session-ehcache3/),[Hazelcast]({{ site.codeurl }}/pippo-session-parent/pippo-session-hazelcast/),[Infinispan]({{ site.codeurl }}/pippo-session-parent/pippo-session-infinispan/))
+- Memcached ([Spymemcached]({{ site.codeurl }}/pippo-session-parent/pippo-session-spymemcached/),[Xmemcached]({{ site.codeurl }}/pippo-session-parent/pippo-session-xmemcached/))
+- Database ([JDBC]({{ site.codeurl }}/pippo-session-parent/pippo-session-jdbc/),[Jedis]({{ site.codeurl }}/pippo-session-parent/pippo-session-jedis/),[MongoDB]({{ site.codeurl }}/pippo-session-parent/pippo-session-mongodb/))
 
 A session is available automatically to templates for the rendering page process, which allows you to reference any session attribute in your template. Below is a simple example using freemarker as template engine:  
 
