Fix typo in pippo-guice integration

--- a/_posts/2015-05-27-guice.md
+++ b/_posts/2015-05-27-guice.md
@@ -32,7 +32,7 @@ Pippo automatically creates the _ContactsController_ instance and pippo-guice in
 To activate pippo-guice integration in your Application you must add `GuiceControllerFactory`:
 
 ```java
-public class MyApplication extends Application {
+public class MyApplication extends ControllerApplication {
 
     @Override
     protected void onInit() {
