--- a/_posts/2015-05-27-guice.md
+++ b/_posts/2015-05-27-guice.md
@@ -29,7 +29,7 @@ public class ContactsController extends Controller {
 
 Pippo automatically creates the _ContactsController_ instance and pippo-guice injects the ContactService service bean, so basically you don’t have to worry about any of that stuff. 
 
-To activate pippo-guice integration in your Application you must add `GuiceControllerFactory`:
+To activate pippo-guice integration in your Application you must register `GuiceControllerFactory` and extend from `ControllerApplication` instead:
 
 ```java
 public class MyApplication extends ControllerApplication {
