--- a/_posts/2015-03-17-server.md
+++ b/_posts/2015-03-17-server.md
@@ -70,19 +70,76 @@ If you need to create support for another embedded web server that is not implem
 than all you need to do is to implement [WebServer]({{ site.coreurl }}/src/main/java/ro/pippo/core/WebServer.java) or to extends [AbstractWebServer]({{ site.coreurl }}/src/main/java/ro/pippo/core/AbstractWebServer.java).
 
 ```java
-public interface WebServer {
+public interface WebServer<T extends WebServerSettings> {
 
-    public WebServerSettings getSettings();
-    public void setSettings(WebServerSettings settings);
-    public PippoFilter getPippoFilter();
-    public void setPippoFilter(PippoFilter pippoFilter);
-    public void start();
-    public void stop();
+    T getSettings();
+
+    PippoFilter getPippoFilter();
+
+    WebServer setPippoFilter(PippoFilter pippoFilter);
+
+    String getPippoFilterPath();
+
+    WebServer setPippoFilterPath(String pippoFilterPath);
+
+    WebServer init(PippoSettings pippoSettings);
+
+    void start();
+
+    void stop();
+
+}
+```
+
+If you want to make your embedded server plugable for Pippo than you must add `@MetaInfServices(WebServer.class)` annotation to 
+your class
+
+```java
+@MetaInfServices(WebServer.class)
+public class JettyServer extends AbstractWebServer<JettySettings> {
+
+    // attributes, methods, ...
     
 }
 ```
 
-If you want to make your embedded server plugable for Pippo than you must add file 
-`ro.pippo.core.WebServer` in _src/main/resources/META-INF/services_ folder with your class name that implements 
-WebServer as content (for a Tomcat integration the content file should be _ro.pippo.tomcat.TomcatServer_).
+Are some situations when the settings provided by an `WebServer` instance are not enough for you.  
+In these situations you need to create a custom WebServer.  
+The idea is to create a custom WebServer if you want to override some aspects (methods) of that server or
+if you want free access to the servlet container (Jetty, Tomcat, ...). 
+
+Show below the code for a `JettyServer` with persistent sessions  
+
+```java
+public class MyJettyServer extends JettyServer {
+
+    @Override
+    protected ServletContextHandler createPippoHandler() {
+        ServletContextHandler handler = super.createPippoHandler();
+
+        // set session manager with persistence
+        HashSessionManager sessionManager = new HashSessionManager();
+        try {
+            sessionManager.setStoreDirectory(new File("sessions-storage"));
+        } catch (IOException e) {
+            throw new PippoRuntimeException(e);
+        }
+        sessionManager.setLazyLoad(true); // other possible option
+        handler.setSessionHandler(new SessionHandler(sessionManager));
+
+        return handler;
+    }
+
+}
+
+
+public class Main {
+
+    public static void main(String[] args) {
+        new Pippo(new MyApplication()).setServer(new MyJettyServer()).start();
+    }
+
+}
+```
+
 
