--- a/_posts/2015-05-05-routes.md
+++ b/_posts/2015-05-05-routes.md
@@ -110,6 +110,8 @@ If you specify your parameter <u>without</u> a regex pattern, like the third exa
 across a large number of routes without needing to define this attribute on each individual route.   
 Also you can add (route) filters for all routes of the group.
 
+The `RouteGroup` is a concept very import when you are forced to deal with a considerable number of routes in your application.  
+
 The below snippet defines a `UserRoutes` group:
 
 ```java
@@ -146,6 +148,40 @@ public class PippoApplication extends Application {
 
 You can access the routes defined in `UserRoutes` using something like `http://localhost:8338/user/1` (retrieve the user with _id_ equals with 1).
 
+Pippo has support for __NESTED GROUPS__.  
+The idea is that you can create completely decoupled routes groups. Using nested routes groups you can create a nice modular application.
+
+```java
+class DemoApplication extends Application {
+
+    @Override
+    protected void onInit() {
+        addRouteGroup(new AdminRoutes());
+    }
+
+}
+
+class AdminRoutes extends RouteGroup {
+
+    public AdminRoutes() {
+        super("/admin");
+
+        // BEFORE FILTERS
+        addBeforeFilters();
+
+        // ROUTES
+        addRoutes();
+
+        // GROUPS
+        addRouteGroup(new UserRoutes());
+        addRouteGroup(new CustomerRoutes());
+    }
+
+}
+```
+
+In above snippet I added (in DemoApplication) `AdminRoutes` as route group which contains `UserRoutes` and `CustomerRoutes` as child routes groups.   
+I don't need to know when I create a RouteGroup where the group will be mount. For example I can have a modular web application where each plugin comes with own independent routes (user management -> `UserRoutes`, customer management -> `CustomerRoutes`).  
+  
 You can see a more complex example in [Matilda](https://github.com/decebals/matilda/blob/master/src/main/java/ro/fortsoft/matilda/PippoApplication.java#L108) (a real life application built with Pippo).
  
-
