--- a/_posts/2015-05-05-routes.md
+++ b/_posts/2015-05-05-routes.md
@@ -152,7 +152,7 @@ Pippo has support for __NESTED GROUPS__.
 The idea is that you can create completely decoupled routes groups. Using nested routes groups you can create a nice modular application.
 
 ```java
-class DemoApplication extends Application {
+public class DemoApplication extends Application {
 
     @Override
     protected void onInit() {
@@ -161,7 +161,7 @@ class DemoApplication extends Application {
 
 }
 
-class AdminRoutes extends RouteGroup {
+public class AdminRoutes extends RouteGroup {
 
     public AdminRoutes() {
         super("/admin");
