--- a/_posts/2015-03-17-server.md
+++ b/_posts/2015-03-17-server.md
@@ -48,7 +48,7 @@ Simple set the `server.port` variable from your `src\main\resources\main\conf\ap
 server.port = 8081
 ```
 
-Pippo detects automatically the template engine using __ServiceLocator__.  
+Pippo detects automatically the template engine using __ServiceLoader__.  
 Pippo comes (out of the box) with some web servers:
 
 - [Jetty](http://eclipse.org/jetty) `pippo-jetty`
@@ -142,4 +142,66 @@ public class Main {
 }
 ```
 
+The `WebServer` abstraction allows you to add a `Servlet`, `Filter` or `ServletContextListener` in any supported servlet container
+via `addListener(Class<? extends ServletContextListener> listener)` method.  
+For the same task but more modular you can use `WebServerInitializer`.  
+Below I present you a code snippet that add a servlet to Pippo:
 
+``` java
+import org.kohsuke.MetaInfServices;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import ro.pippo.core.WebServerInitializer;
+
+import javax.servlet.ServletContext;
+import javax.servlet.ServletRegistration;
+
+@MetaInfServices
+public class ServletAppender implements WebServerInitializer {
+
+    private static final Logger log = LoggerFactory.getLogger(ServletAppender.class);
+
+    @Override
+    public void init(ServletContext servletContext) {
+        ServletRegistration.Dynamic demoServlet = servletContext.addServlet("demo", DemoServlet.class);
+        demoServlet.setLoadOnStartup(1);
+        demoServlet.addMapping("/demo");
+        // other possible settings for demoServlet
+
+        log.debug("Added servlet '{}' to '{}'", demoServlet.getClassName(), demoServlet.getMappings().iterator().next());
+    }
+
+    @Override
+    public void destroy(ServletContext servletContext) {
+        // do nothing
+    }
+
+}
+```
+
+``` java
+import ro.pippo.core.Pippo;
+
+import static ro.pippo.core.route.Route.GET;
+
+public class ServletDemo {
+
+    public static void main(String[] args) {
+        Pippo pippo = new Pippo();
+
+        // set pippo filter path
+        pippo.getServer().setPippoFilterPath("/app/*");
+
+        // add route
+        pippo.GET("/", routeContext -> routeContext.send("Hello from Pippo route!"));
+
+        pippo.start();
+    }
+
+}
+```
+DON'T forget to add `@MetaInfServices` on your implementation of `WebServerInitializer`!  
+The full code is available in [pippo-demo-servlet](({{ site.demourl }}/pippo-demo-servlet)) project.
+
+A more complex demo project that shows you how to integrate [Jersey](https://jersey.java.net) is available in [pippo-demo-jersey](({{ site.demourl }}/pippo-demo-jersey)) project.
+This demo is the code source of the article `Pippo and Jersey (JAX-RS): A Match Made in Heaven` available on [DZone](https://dzone.com/articles/pippo-and-jersey-jax-rs).
