--- a/_posts/2015-03-17-server.md
+++ b/_posts/2015-03-17-server.md
@@ -201,7 +201,7 @@ public class ServletDemo {
 }
 ```
 DON'T forget to add `@MetaInfServices` on your implementation of `WebServerInitializer`!  
-The full code is available in [pippo-demo-servlet](({{ site.demourl }}/pippo-demo-servlet)) project.
+The full code is available in [pippo-demo-servlet]({{ site.demourl }}/pippo-demo-servlet) project.
 
-A more complex demo project that shows you how to integrate [Jersey](https://jersey.java.net) is available in [pippo-demo-jersey](({{ site.demourl }}/pippo-demo-jersey)) project.
-This demo is the code source of the article `Pippo and Jersey (JAX-RS): A Match Made in Heaven` available on [DZone](https://dzone.com/articles/pippo-and-jersey-jax-rs).
+A more complex demo project that shows you how to integrate [Jersey](https://jersey.java.net) is available in [pippo-demo-jersey]({{ site.demourl }}/pippo-demo-jersey) project.
+This demo is the code source of the article `Pippo and Jersey (JAX-RS): A Match Made in Heaven` that is availables on [DZone](https://dzone.com/articles/pippo-and-jersey-jax-rs).
